--- a/TakeFoodAPI/appsettings.json
+++ b/TakeFoodAPI/appsettings.json
@@ -1,9 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
     }
+  },
+  "ELKConfiguration": {
+    "Uri": "http://34.150.19.102:9200"
   },
   "AllowedHosts": "*"
 }
