--- a/TakeFoodAPI/TakeFoodAPI.csproj
+++ b/TakeFoodAPI/TakeFoodAPI.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PackageId>TakeFoodAPI</PackageId>
+		<IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
