--- a/TakeFoodAPI/TakeFoodAPI.csproj
+++ b/TakeFoodAPI/TakeFoodAPI.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+		<PackageReference Include="log4net" Version="2.0.15" />
 		<PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
 		<PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
 		<PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
