--- a/TakeFoodAPI/web.config
+++ b/TakeFoodAPI/web.config
@@ -6,7 +6,7 @@
 				<add
 					name="textWriterTraceListener"
 					type="System.Diagnostics.TextWriterTraceListener"
-					initializeData="/var/www/LogAPI\log4net.txt" />
+					initializeData="/var/www/LogAPI/log4net.txt" />
 			</listeners>
 		</trace>
 	</system.diagnostics>
