get create Order

--- a/TakeFoodAPI/web.config
+++ b/TakeFoodAPI/web.config
@@ -6,7 +6,7 @@
 				<add
 					name="textWriterTraceListener"
 					type="System.Diagnostics.TextWriterTraceListener"
-					initializeData="/var/www/LogAPI/log4net.txt" />
+					initializeData="E:\CD_CN\LogBackUp\log4net.txt" />
 			</listeners>
 		</trace>
 	</system.diagnostics>
@@ -17,7 +17,7 @@
 				<param name="LevelMin" value="ERROR"/>
 				<param name="LevelMax" value="ERROR"/>
 			</filter>
-			<param name="File" value="/var/www/LogAPI/logError.txt" />
+			<param name="File" value="E:\CD_CN\LogBackUp\logError.log" />
 			<encoding type="System.Text.UTF8Encoding"/>
 			<param name="AppendToFile" value="true" />
 			<maximumFileSize value="100KB" />
@@ -37,7 +37,7 @@
 				<param name="LevelMin" value="DEBUG"/>
 				<param name="LevelMax" value="WARN"/>
 			</filter>
-			<param name="File" value="/var/www/LogAPI/logInfo.txt" />
+			<param name="File" value="E:\CD_CN\LogBackUp\logInfo.log" />
 			<encoding type="System.Text.UTF8Encoding"/>
 			<param name="AppendToFile" value="true" />
 			<maximumFileSize value="100KB" />
