--- a/TakeFoodAPI/web.config
+++ b/TakeFoodAPI/web.config
@@ -11,6 +11,17 @@
 		</trace>
 	</system.diagnostics>
 	<log4net debug="true">
+		<appender name="SentryAppender" type="Sentry.Log4Net.SentryAppender, Sentry.Log4Net">
+			<!--Defining the DSN here allows log4net integration to initialize the SDK-->
+			<!--You can leave the DSN out of this configuration file and initialize the SDK-->
+			<!--via code (SentrySdk.Init) or via another integration like ASP.NET-->
+			<!--The SDK only needs to be initialized once, you can choose where to do that-->
+			<Dsn value="https://dea5cb93c17c4a3b82c2d19029cd5b6c@o4504273918951424.ingest.sentry.io/4504274276909056" />
+			<!--Sends the log event Identity value as the user-->
+			<SendIdentity value="true" />
+			<Environment value="dev" />
+			<threshold value="INFO" />
+		</appender>
 
 		<appender name="errorLog" type="log4net.Appender.RollingFileAppender">
 			<filter type="log4net.Filter.LevelRangeFilter">
@@ -29,7 +40,7 @@
 			<layout type="log4net.Layout.PatternLayout,log4net">
 				<!--<param name="Header" value="[Server startup]&#13;&#10;" />
         <param name="Footer" value="[Server shutdown]&#13;&#10;" />-->
-				<param name="ConversionPattern" value="(%property{currentUser}) %date %level %logger - %message %newline" />
+				<param name="ConversionPattern" value="%date %level %logger - %message %newline" />
 			</layout>
 		</appender>
 		<appender name="infoLog" type="log4net.Appender.RollingFileAppender">
@@ -49,7 +60,7 @@
 			<layout type="log4net.Layout.PatternLayout,log4net">
 				<!--<param name="Header" value="[Server startup]&#13;&#10;" />
         <param name="Footer" value="[Server shutdown]&#13;&#10;" />-->
-				<param name="ConversionPattern" value="(%property{currentUser}) %date %level %logger - %message %newline" />
+				<param name="ConversionPattern" value="%date %level %logger - %message %newline" />
 			</layout>
 		</appender>
 
@@ -59,6 +70,8 @@
 			<level value="ALL" />
 			<appender-ref ref="errorLog" />
 			<appender-ref ref="infoLog" />
+			<appender-ref ref="SentryAppender" />
+			<appender-ref ref="ConsoleAppender" />
 		</root>
 	</log4net>
 
