--- a/TakeFoodAPI/web.config
+++ b/TakeFoodAPI/web.config
@@ -28,7 +28,7 @@
 				<param name="LevelMin" value="ERROR"/>
 				<param name="LevelMax" value="ERROR"/>
 			</filter>
-			<param name="File" value="E:\CD_CN\LogBackUp\logError.log" />
+			<param name="File" value="/var/www/LogAPI/logError.log" />
 			<encoding type="System.Text.UTF8Encoding"/>
 			<param name="AppendToFile" value="true" />
 			<maximumFileSize value="100KB" />
@@ -48,7 +48,7 @@
 				<param name="LevelMin" value="DEBUG"/>
 				<param name="LevelMax" value="WARN"/>
 			</filter>
-			<param name="File" value="E:\CD_CN\LogBackUp\logInfo.log" />
+			<param name="File" value="/var/www/LogAPI/logInfo.log" />
 			<encoding type="System.Text.UTF8Encoding"/>
 			<param name="AppendToFile" value="true" />
 			<maximumFileSize value="100KB" />
