--- a/TakeFoodAPI/web.config
+++ b/TakeFoodAPI/web.config
@@ -70,8 +70,8 @@
 			<level value="ALL" />
 			<appender-ref ref="errorLog" />
 			<appender-ref ref="infoLog" />
-			<!--<appender-ref ref="SentryAppender" />
-			<appender-ref ref="ConsoleAppender" />-->
+			<appender-ref ref="SentryAppender" />
+			<appender-ref ref="ConsoleAppender" />
 		</root>
 	</log4net>
 
