--- a/TakeFoodAPI/web.config
+++ b/TakeFoodAPI/web.config
@@ -71,7 +71,7 @@
 			<appender-ref ref="errorLog" />
 			<appender-ref ref="infoLog" />
 			<appender-ref ref="SentryAppender" />
-			<appender-ref ref="ConsoleAppender" />
+			<!--<appender-ref ref="ConsoleAppender" />-->
 		</root>
 	</log4net>
 
