--- a/TakeFoodAPI/appsettings.json
+++ b/TakeFoodAPI/appsettings.json
@@ -41,5 +41,8 @@
       "Host": "smtp.gmail.com",
       "Port": 587
     }
+  },
+  "Sentry": {
+    "Dsn": "https://dea5cb93c17c4a3b82c2d19029cd5b6c@o4504273918951424.ingest.sentry.io/4504274276909056"
   }
 }
