--- a/TakeFoodAPI/web.config
+++ b/TakeFoodAPI/web.config
@@ -60,7 +60,7 @@
 			<layout type="log4net.Layout.PatternLayout,log4net">
 				<!--<param name="Header" value="[Server startup]&#13;&#10;" />
         <param name="Footer" value="[Server shutdown]&#13;&#10;" />-->
-				<param name="ConversionPattern" value="%date %level %logger - %message %newline" />
+				<param name="ConversionPattern" value="%date %level %logger - %message [%property{REQUEST_TYPE}] [%property{URL}] [%property{BODY}] %newline" />
 			</layout>
 		</appender>
 
